--- a/client/apollo/css/src/Form/Checkbox/Checkbox/CheckboxLF.scss
+++ b/client/apollo/css/src/Form/Checkbox/Checkbox/CheckboxLF.scss
@@ -18,7 +18,7 @@
     --checkbox-background-color: var(--color-axa);
   }
 
-  &:has([aria-invalid="true"]) {
+  &:not(:has(:checked)):has([aria-invalid="true"]) {
     --checkbox-border-color: var(--color-red-700);
   }
 }
